--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,9 @@ body{
     background-color: rgb(248, 240, 230);
     font-family: 'Cormorant Garamond', serif;
 }
-
+.logo:hover{
+    color: rgb(114, 62, 9);
+}
 .logo-font{
     font-family: 'Cormorant Garamond', serif;
     font-style: italic;
