--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@ body{
 a:hover {
     color: #d8d2b8;
   }
-.img-fluid{
+.img-instagram{
     height: 300px;
     width: 250px;
     object-fit: cover;
@@ -89,7 +89,8 @@ a:hover {
 .floated{
     padding: 20px;
     position: relative;
-    left: 180px;
+    top: -110px;
+    left: 700px;
     width: 600px;
     color:rgb(138, 65, 36);
     font-size: larger;
@@ -120,5 +121,5 @@ a:hover {
 }
 .icon-align-center{
     text-align: center;
-    
 }
+
