--- a/css/custom.css
+++ b/css/custom.css
@@ -96,6 +96,14 @@ a:hover {
     font-size: larger;
     font-family: 'Quicksand', sans-serif;
 }
+.floated-lounge{
+    padding-left: 90px;
+    left: 180px;
+    width: 760px;
+    color:rgb(138, 65, 36);
+    font-size: larger;
+    font-family: 'Quicksand', sans-serif;
+}
 
 .btn-design{
     border-color: rgb(138, 65, 36);
@@ -108,9 +116,9 @@ a:hover {
     border-color: rgb(138, 65, 36);
 }
 #glamping-party-img{
-    object-position: 10% 70%;
-    width: 700px;
-    height: 400px;
+    
+    width: 800px;
+    height: 500px;
     object-fit: cover;
 }
 
