--- a/css/comingsoon.css
+++ b/css/comingsoon.css
@@ -1,3 +1,138 @@
 body{
-    background-image: url('img_girl.jpg');
+    background-color: rgb(248, 240, 230);
+    font-family: 'Cormorant Garamond', serif;
+}
+
+.container-fluid{
+    background-image: url(../img/coming-soon.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 900px;
+    background-size: cover;
+    display: grid;
+    align-items: center;
+}
+
+.coming-soon{
+    background-color: rgba(250, 235, 215, 0.749);
+    color: rgb(114, 62, 9);
+    display: grid;
+    place-items: center;
+    margin: 0px 300px 0px 300px;
+}
+
+.center-screen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+}
+
+
+h1{
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 50px;
+}
+
+h3{
+    font-family: 'Allura', cursive;
+    font-size: 40px;
+}
+.logo:hover{
+    color: rgb(114, 62, 9);
+}
+.logo-font{
+    font-family: 'Cormorant Garamond', serif;
+    font-style: italic;
+    color: rgb(138, 65, 36);
+    font-size: 30px;
+}
+
+.logo{
+    font-size: 40px;
+}
+
+.navbar-nav .nav-link.active {
+    color:rgb(138, 65, 36);
+}
+
+a:hover {
+    color: #d8d2b8;
+  }
+
+  .bn30 {
+    border: 5em;
+    cursor: pointer;
+    outline: none;
+    font-size: 16px;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+    background-image: linear-gradient(45deg, #714b0a, #f0978d);
+    padding: 0.7em 2em;
+    border-radius: 65px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    -webkit-transition: box-shadow 0.25s;
+    transition: box-shadow 0.25s;
+    color: white;
+  }
+  
+  .bn30 .text {
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(45deg, #714b0a, #f0978d);
+  }
+  
+  .bn30:after {
+    content: "";
+    border-radius: 18px;
+    position: absolute;
+    margin: 4px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    background: #462b0dd2;
+  }
+  
+  .bn30:hover {
+    background-image: linear-gradient(-45deg, #714b0a, #f0978d);
+    box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+  }
+  
+  .bn30:hover .text {
+    background-image: linear-gradient(-45deg, #714b0a, #f0978d);
+  }
+
+/*---Media Queries --*/
+@media only screen and (max-width: 992px){
+  .coming-soon{
+    background-color: rgba(250, 235, 215, 0.749);
+    color: rgb(114, 62, 9);
+    display: grid;
+    place-items: center;
+    margin: 0px 200px 0px 200px;
+}
+
+}
+@media only screen and (max-width: 768px){
+  .coming-soon{
+    background-color: rgba(250, 235, 215, 0.749);
+    color: rgb(114, 62, 9);
+    display: grid;
+    place-items: center;
+    margin: 0px 100px 0px 100px;
+}
+}
+@media only screen and (max-width: 576px){
+  .coming-soon{
+    background-color: rgba(250, 235, 215, 0.749);
+    color: rgb(114, 62, 9);
+    display: grid;
+    place-items: center;
+    margin: 0px 30px 0px 30px;
+}
 }
