--- a/css/custom.css
+++ b/css/custom.css
@@ -13,6 +13,11 @@ body{
     color: rgb(138, 65, 36);
     font-size: 30px;
 }
+.logo-image{
+    height: 130px ;
+    width: 300px;
+    object-fit: cover;
+}
 
 .logo{
     font-size: 40px;
@@ -21,7 +26,6 @@ body{
 .navbar-nav .nav-link.active {
     color:rgb(138, 65, 36);
 }
-
 a:hover {
     color: #d8d2b8;
   }
@@ -31,6 +35,9 @@ a:hover {
     object-fit: cover;
 }
 
+#slides{
+    height:32rem;
+}
 #main-photo{
     width: 100%;
     height: 450px;
@@ -131,3 +138,22 @@ a:hover {
     text-align: center;
 }
 
+/*---Media Queries --*/
+@media only screen and (max-width: 992px){
+    .logo-image{
+        height: 90px ;
+        width: 240px;
+        object-fit: cover;
+    }
+  
+  }
+  @media only screen and (max-width: 768px){
+
+  }
+  @media only screen and (max-width: 576px){
+      .logo-image{
+        height: 120px ;
+        width: 540px;
+        object-fit: cover;
+    }
+  }
