--- a/css/comingsoon.css
+++ b/css/comingsoon.css
@@ -108,6 +108,11 @@ a:hover {
     place-items: center;
     margin: 0px 200px 0px 200px;
 }
+    .logo-image{
+        height: 90px ;
+        width: 240px;
+        object-fit: cover;
+    }
 
 }
 @media only screen and (max-width: 768px){
@@ -126,5 +131,10 @@ a:hover {
     display: grid;
     place-items: center;
     margin: 0px 30px 0px 30px;
+}
+  .logo-image{
+    height: 120px ;
+    width: 540px;
+    object-fit: cover;
 }
 }
