--- a/css/custom.css
+++ b/css/custom.css
@@ -34,21 +34,71 @@ a:hover {
     width: 250px;
     object-fit: cover;
 }
-
-#slides{
-    height:32rem;
+/*sets the background image of Glamping Page.*/
+#glamping-background{
+    background-image: url(../img/HD-photos/add-on5.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 1500px;
+    background-size: cover;
+    display: grid;
+    align-items: center;
 }
 
-.carousel {
-    width:100%;
-    height:560px;
-  }
+#lounge-background{
+    background-image: url(../img/HD-photos/glamp-tent11.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 1500px;
+    background-size: cover;
+    display: grid;
+    align-items: center;
+}
 
-.carousel-inner > .carousel-item > img {
-    width:340px;
-    height:560px;
-    object-fit: cover;
-  }
+#picnic-background{
+    background-image: url(../img/HD-photos/picnic-2.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 1500px;
+    background-size: cover;
+    display: grid;
+    align-items: center;
+}
+#policies-background{
+    background-image: url(../img/HD-photos/add-on1.jpeg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 900px;
+    background-size: cover;
+    display: grid;
+    align-items: center;
+}
+/*This is the background for content*/
+.transparent-bg{
+    background-color: rgba(250, 235, 215, 0.893);
+    color: rgb(114, 62, 9);
+    display: grid;
+    place-items: center;
+    margin: 0px 300px 0px 300px;
+}
+
+ul{
+    list-style:none;
+}
+h1{
+    font-family: 'rolasan_signatureregular', cursive;
+    font-size: 100px;
+    color: rgb(138, 65, 36);
+}
+
+h5{
+    font-family: 'rolasan_signatureregular', cursive;
+    font-size: 45px;
+}
 
 #main-photo{
     width: 100%;
@@ -76,48 +126,11 @@ a:hover {
     object-fit: cover;
 }
 
-.img-stack{
-    display:grid;
-    grid-template-columns: repeat(12,1fr);
-    position: relative;
-    margin-left: 140px;
-}
-
-.img-stack-top{
-    grid-column: 2 / span 7;
-    grid-row: 1;
-    padding-top: 20%;
-    z-index: 1;
-}
-.img-stack-bottom{
-    grid-column: 4 / -1;
-    grid-row: 1;
-}
-
-#top-photo{
-    width:400px;
-    height:500px;
-    object-fit: cover;
-}
-
-#bottom-photo{
-    width:700px;
-    height:500px;
-    object-fit: cover;
-}
-.description{
+/*this styles the content within the transparent box*/
+.content-styling{
     color:rgb(138, 65, 36);
     font-size: larger;
-    font-family: 'Quicksand', sans-serif;
-    margin: 60px;
-}
-.floated-lounge{
-    padding-left: 90px;
-    left: 180px;
-    width: 760px;
-    color:rgb(138, 65, 36);
-    font-size: larger;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Cormorant Garamond', serif;
 }
 
 .btn-design{
@@ -130,18 +143,7 @@ a:hover {
     color: white;
     border-color: rgb(138, 65, 36);
 }
-#glamping-party-img{
-    
-    width: 800px;
-    height: 500px;
-    object-fit: cover;
-}
 
-.picnic-photos{
-    width: 725px;
-    height: 743px;
-    object-fit: cover;
-}
 .icon-align-center{
     text-align: center;
 }
@@ -153,9 +155,23 @@ a:hover {
         width: 240px;
         object-fit: cover;
     }
-  
-  }
+    /*This is the background for content*/
+    .transparent-bg{
+    background-color: rgba(250, 235, 215, 0.893);
+    color: rgb(114, 62, 9);
+    display: grid;
+    place-items: center;
+    margin: 0px 200px 0px 200px;
+    }
+}
   @media only screen and (max-width: 768px){
+    .transparent-bg{
+        background-color: rgba(250, 235, 215, 0.893);
+        color: rgb(114, 62, 9);
+        display: grid;
+        place-items: center;
+        margin: 0px 100px 0px 100px;
+        }
 
   }
   @media only screen and (max-width: 576px){
@@ -164,4 +180,11 @@ a:hover {
         width: 540px;
         object-fit: cover;
     }
+    .transparent-bg{
+        background-color: rgba(250, 235, 215, 0.893);
+        color: rgb(114, 62, 9);
+        display: grid;
+        place-items: center;
+        margin: 0px 30px 0px 30px;
+        }
   }
