--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 /* your styles go here */
 
 .header{
-    background-color: rgba(27, 29, 29, 0.055);
+    background-color: rgba(90, 175, 175, 0.907);
 }
 body{
     background-color: rgb(248, 240, 230);
@@ -73,14 +73,15 @@ a:hover {
     align-items: center;
 }
 #glamping-background{
-    background-image: url(../img/HD-photos/add-on5.jpeg);
+    background-image: url(../img/HD-photos/glamp-tent8.jpeg);
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 1500px;
+    height: 100%;
     background-size: cover;
     display: grid;
     align-items: center;
+    
 }
 
 #lounge-background{
@@ -88,7 +89,7 @@ a:hover {
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 1500px;
+    height: 100%;
     background-size: cover;
     display: grid;
     align-items: center;
@@ -99,7 +100,7 @@ a:hover {
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 1500px;
+    height: 100%;
     background-size: cover;
     display: grid;
     align-items: center;
@@ -109,7 +110,7 @@ a:hover {
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 900px;
+    height: 100%;
     background-size: cover;
     display: grid;
     align-items: center;
@@ -120,7 +121,7 @@ a:hover {
     color: rgb(114, 62, 9);
     display: grid;
     place-items: center;
-    margin: 0px 300px 0px 300px;
+    margin: 0px 150px 0px 150px;
     text-align: center;
 }
 .transparent-bg-home{
@@ -179,7 +180,10 @@ img{
     height: 300px;
     object-fit: cover;
 }
-
+.floral-design-img{
+    width: 100px;
+    height: 90px;
+}
 /*this styles the content within the transparent box*/
 .content-styling{
     color:rgb(138, 65, 36);
@@ -203,10 +207,25 @@ img{
 }
 
 /*---Media Queries --*/
+@media only screen and (max-width: 1256px) {
+    .logo-image{
+        height: 90px ;
+        width: 160px;
+        object-fit: cover;
+    }
+    .transparent-bg{
+        background-color: rgba(250, 235, 215, 0.893);
+        color: rgb(114, 62, 9);
+        display: grid;
+        place-items: center;
+        margin: 0px 150px 0px 150px;
+        }
+}
+
 @media only screen and (max-width: 992px){
     .logo-image{
-        height: 30px ;
-        width: 240px;
+        height: 90px ;
+        width: 160px;
         object-fit: cover;
     }
     /*This is the background for content*/
@@ -215,16 +234,7 @@ img{
     color: rgb(114, 62, 9);
     display: grid;
     place-items: center;
-    margin: 0px 100px 0px 100px;
-    }
-}
-
-@media only screen and (max-width: 991px) {
-
-    .logo-image{
-        height: 90px ;
-        width: 160px;
-        object-fit: cover;
+    margin: 0px 0px 0px 0px;
     }
 }
   @media only screen and (max-width: 768px){
@@ -238,7 +248,7 @@ img{
         color: rgb(114, 62, 9);
         display: grid;
         place-items: center;
-        margin: 0px 100px 0px 100px;
+        margin: 0px 0px 0px 0px;
         }
 
   }
@@ -259,7 +269,7 @@ img{
     }
 
     #glamping-background{
-        background-image: url(../img/HD-photos/add-on5.jpeg);
+        background-image: url(../img/HD-photos/glamp-tent8.jpeg);
         background-repeat: no-repeat;
         background-position: center;
         width: 100%;
