--- a/css/custom.css
+++ b/css/custom.css
@@ -134,7 +134,11 @@ a:hover {
     padding: 30px;
     
 }
-
+.test-custom{
+    width: 600px; 
+    height: 200px;
+    background-color: rgba(245, 244, 244, 0.29);
+}
 ul{
     list-style:none;
 }
@@ -147,6 +151,11 @@ h1{
 h5{
     font-family: 'rolasan_signatureregular', cursive;
     font-size: 45px;
+}
+
+h6{
+    font-family: 'rolasan_signatureregular', cursive;
+    font-size: 30px;
 }
 
 #main-photo{
@@ -220,6 +229,12 @@ img{
         place-items: center;
         margin: 0px 150px 0px 150px;
         }
+
+    .test-custom{
+        width: 500px; 
+        height: 200px;
+        background-color: rgba(245, 244, 244, 0.29);
+    }
 }
 
 @media only screen and (max-width: 992px){
@@ -310,6 +325,11 @@ img{
         display: grid;
         align-items: center;
     }
+    .test-custom{
+        width: 400px; 
+        height: 200px;
+        background-color: rgba(245, 244, 244, 0.29);
+    }
   }
   @media only screen and (max-width: 415px){
     .logo-image{
@@ -321,5 +341,10 @@ img{
         width: 100%;
         height: 300px;
         object-fit: cover;
+    }
+    .test-custom{
+        width: 300px; 
+        height: 300px;
+        background-color: rgba(245, 244, 244, 0.29);
     }
   }
