--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,5 @@
 /* your styles go here */
 
-.header{
-    background-color: rgba(90, 175, 175, 0.907);
-}
 body{
     background-color: rgb(248, 240, 230);
     font-family: 'Cormorant Garamond', serif;
@@ -25,6 +22,10 @@ body{
 
 .logo{
     font-size: 40px;
+}
+
+.navbar{
+    left: 39px;
 }
 
 .navbar-nav .nav-link.active {
