--- a/css/custom.css
+++ b/css/custom.css
@@ -143,6 +143,10 @@ body{
 ul{
     list-style:none;
 }
+ul li{
+    line-height: 25px;
+    padding-bottom: 10px;
+}
 h1{
     font-family: 'rolasan_signatureregular', cursive;
     font-size: 100px;
