--- a/css/custom.css
+++ b/css/custom.css
@@ -275,6 +275,7 @@ navbar{
     place-items: center;
     margin: 0px 0px 0px 0px;
     }
+
 }
   @media only screen and (max-width: 768px){
     .logo-image{
@@ -373,5 +374,20 @@ navbar{
         width: 300px; 
         height: 300px;
         background-color: rgba(245, 244, 244, 0.29);
+    }
+  }
+
+  @media (max-width: 575px) {
+    .navbar-collapse{
+      position: fixed;
+      inset: 0 0 0 0;
+      padding: min(30vh, 10rem) 2em;
+      flex-direction: column;
+      background: hsl(0 0% 100% / .1);
+      backdrop-filter: blur(1rem);
+    }
+
+    .navbar-toggler{
+        z-index: 99999;
     }
   }
