--- a/css/custom.css
+++ b/css/custom.css
@@ -385,8 +385,9 @@ navbar{
       flex-direction: column;
       background: hsl(0 0% 100% / .1);
       backdrop-filter: blur(1rem);
+      -webkit-backdrop-filter: blur(1rem);
     }
-
+    
     .navbar-toggler{
         z-index: 99999;
     }
