--- a/css/custom.css
+++ b/css/custom.css
@@ -254,9 +254,6 @@ navbar{
 }
 
 @media only screen and (max-width: 992px){
-    .headerStyle{
-        margin-top: 300px;
-    }
     .img-instagram{
         height: 300px;
         width: 340px;
@@ -378,17 +375,23 @@ navbar{
   }
 
   @media (max-width: 575px) {
+
     .navbar-collapse{
       position: fixed;
+      z-index: 1000;
       inset: 0 0 0 0;
       padding: min(30vh, 10rem) 2em;
       flex-direction: column;
       background: hsl(0 0% 100% / .1);
       backdrop-filter: blur(1rem);
-      -webkit-backdrop-filter: blur(1rem);
+      -webkit-backdrop-filter: blur(2rem);
     }
     
     .navbar-toggler{
         z-index: 99999;
+    }
+
+    .collapsing {
+        transition: none;
     }
   }
