--- a/css/custom.css
+++ b/css/custom.css
@@ -195,10 +195,7 @@ img{
     height: 300px;
     object-fit: cover;
 }
-.floral-design-img{
-    width: 100px;
-    height: 90px;
-}
+
 /*this styles the content within the transparent box*/
 .content-styling{
     color:rgb(138, 65, 36);
@@ -232,11 +229,7 @@ navbar{
 
 /*---Media Queries --*/
 @media only screen and (max-width: 1256px) {
-    .logo-image{
-        height: 90px ;
-        width: 160px;
-        object-fit: cover;
-    }
+
     .transparent-bg{
         background-color: rgba(250, 235, 215, 0.893);
         color: rgb(114, 62, 9);
@@ -259,9 +252,12 @@ navbar{
         width: 340px;
         object-fit: cover;
     }
+    .navbar{
+        left: 0px;
+    }
     .logo-image{
-        height: 90px ;
-        width: 160px;
+        height: 150px ;
+        width: 260px;
         object-fit: cover;
     }
     /*This is the background for content*/
@@ -276,8 +272,8 @@ navbar{
 }
   @media only screen and (max-width: 768px){
     .logo-image{
-        height: 90px ;
-        width: 160px;
+        height: 120px ;
+        width: 200px;
         object-fit: cover;
     }
     .transparent-bg{
@@ -288,7 +284,7 @@ navbar{
         margin: 0px 0px 0px 0px;
     }
     .navbar{
-        left: 0px;
+        left: -50px;
     }
 
   }
@@ -298,6 +294,7 @@ navbar{
         width: 160px;
         object-fit: cover;
     }
+
     .transparent-bg{
         background-color: rgba(250, 235, 215, 0.893);
         color: rgb(114, 62, 9);
@@ -354,6 +351,10 @@ navbar{
         width: 400px; 
         height: 200px;
         background-color: rgba(245, 244, 244, 0.29);
+    }
+
+    .navbar{
+        left: 0px;
     }
   }
   @media only screen and (max-width: 415px){
