--- a/css/custom.css
+++ b/css/custom.css
@@ -402,29 +402,24 @@ navbar{
         transition: none;
     }
 
+  }
+
   @media only screen and (max-width: 415px){
     .logo-image{
         height: 60px ;
         width: 140px;
         object-fit: cover;
     }
-    package-img{
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-    }
+
     .test-custom{
         width: 300px; 
         height: 300px;
         background-color: rgba(245, 244, 244, 0.29);
     }
 
-
-  }
-
-  @media only screen and (max-width: 330px){
-
-
+    .package-list{
+        font-size: 13px;
+    }
 
 
   }
