other website updates

--- a/css/custom.css
+++ b/css/custom.css
@@ -102,7 +102,7 @@ body{
 }
 
 #lounge-background{
-    background-image: url(../img/HD-photos/glamp-tent11.jpeg);
+    background-image: url(../img/HD-photos/glamp-tent1.jpg);
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
